--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -23,11 +23,10 @@
 		<link rel="stylesheet" type="text/css" href="{% static 'index.css' %}" />
 		<link rel="stylesheet" type="text/css" href="{% static 'detail_post.css' %}" />
 		<link rel="stylesheet" type="text/css" href="{% static 'style.css' %}" />
-    <title>Django Blog</title>
+    <title>{{title}}</title>
   </head>
   <body>
-    {% include 'blog/nav.html' %} {% block content %} {% endblock content %}
-
+    {% include 'blog/nav.html' %} {% block content %} {% endblock content %} {% include 'blog/footer.html' %}
     <script
       src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"
       integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3"
