--- a/blog/templates/blog/index.html
+++ b/blog/templates/blog/index.html
@@ -1,16 +1,17 @@
-{% extends 'blog/base.html' %} 
+{% extends 'blog/base.html' %}
 
 {% block content %}
+
 <header class="py-5 bg-light shadow-sm border-bottom mb-4">
-	<div class="container">
-		<div class="text-center my-5">
-			<h1 class="fw-bolder">Welcome to Blog Home!</h1>
-			<p class="lead mb-0">
-				Discover Your Journey: Unleashing Inspiration, Embracing Growth.
-				Your Daily Source of Wisdom and Wonder.
-			</p>
-		</div>
-	</div>
+  <div class="container">
+    <div class="text-center my-5">
+      <h1 class="fw-bolder">Welcome to Everything Of Life Home!</h1>
+      <p class="lead mb-0">
+        Discover Your Journey: Unleashing Inspiration, Embracing Growth.
+        Your Daily Source of Wisdom and Wonder.
+      </p>
+    </div>
+  </div>
 </header>
 
 <div class="container">
@@ -20,12 +21,8 @@
       <!-- Search widget-->
       <div class="position-relative custom-form-group">
         <form method="get" action="{% url 'search' %}">
-          <input
-            class="form-control custom-form-control shadow-sm rounded-pill border-0"
-            type="text"
-            name="q"
-            placeholder="Search"
-          />
+          <input class="form-control custom-form-control shadow-sm rounded-pill border-0" type="text" name="q"
+            placeholder="Search" />
         </form>
         <i class="search-icon fa-solid fa-magnifying-glass"></i>
       </div>
@@ -33,24 +30,20 @@
       <div class="custom-list-group">
         <h5 class="fw-bold mb-4">Categories</h5>
         <ul class="list-group scroll-shadows">
-          <li class="list-group-item">
+          <!-- <li class="list-group-item">
             <a href="/">Clear filter</a>
-          </li>
+          </li> -->
           {% for category in categories %}
-            <li class="list-group-item">
-              <a href="/category/{{ category.name }}">{{ category.name }}</a>
-            </li>
+          <li class="list-group-item">
+            <a href="/category/{{ category.name }}">→ {{ category.name }}</a>
+          </li>
           {% endfor %}
         </ul>
       </div>
       <!-- Sorter -->
       <div class="btn-group">
-        <button
-          class="btn btn-primary btn-sm dropdown-toggle sorter"
-          type="button"
-          data-bs-toggle="dropdown"
-          aria-expanded="false"
-        >
+        <button class="btn btn-primary btn-sm dropdown-toggle sorter" type="button" data-bs-toggle="dropdown"
+          aria-expanded="false">
           Sort by
         </button>
         <ul class="dropdown-menu custom-dropdown-menu">
@@ -65,24 +58,20 @@
       {% if object_list %}
       <div class="row">
         {% for object in object_list %}
-					<div class="col-lg-6">
-						<div class="card shadow-sm mb-4">
-							<a href="#!"
-								><img
-									class="card-img-top object-fit-cover"
-									src="{{ object.imageLink }}"
-									alt="..."
-                  height="250"
-							/></a>
-							<div class="card-body">
-								<div class="small text-muted d-flex justify-content-between">
+        <div class="col-lg-6 main">
+          <a href="{% url 'detail_article' object.id %}">
+            <div class="card shadow-sm mb-4">
+              <img class="card-img-top object-fit-cover" src="{{ object.imageLink }}" alt="..." height="250" />
+              <div class="card-body">
+                <div class="small text-muted d-flex justify-content-between">
                   <div>{{ object.date }} by {{ object.author.username }}</div>
                   <div class="category-text"> # {{ object.category }}</div>
                 </div>
-								<h2 class="card-title h4">{{ object.title }}</h2>
-								<p class="card-text">
-									{{ object.description }}
-								</p>
+                <h2 class="card-title h4">
+                  {{ object.title }}</h2>
+                <p class="card-text">
+                  {{ object.description }}
+                </p>
                 <div class="row my-3">
                   <div class="col-12">
                     <div class="d-flex align-items-center">
@@ -108,80 +97,31 @@
                     </div>
                   </div>
                 </div>
-								<a class="btn btn-primary" href="{% url 'detail_article' object.id %}">Read more →</a>
-							</div>
-						</div>
-					</div>
+                <span class="btn btn-primary">Read more →</span>
+              </div>
+            </div>
+          </a>
+        </div>
         {% endfor %}
       </div>
       <!-- Pagination-->
       <nav aria-label="Pagination">
         <ul class="pagination justify-content-center my-4">
-					{% for i in page_obj.paginator.page_range %}
-						{% if page_obj.number == i %}
-							<li class="page-item active"><a class="page-link" href="?page={{ i }}">{{ i }}</a></li>
-						{% else %}
-							<li class="page-item">
-								<a class="page-link" href="?page={{ i }}">{{ i }}</a>
-							</li>
-						{% endif %}
-					{% endfor %}
+          {% for i in page_obj.paginator.page_range %}
+          {% if page_obj.number == i %}
+          <li class="page-item active"><a class="page-link" href="?page={{ i }}">{{ i }}</a></li>
+          {% else %}
+          <li class="page-item">
+            <a class="page-link" href="?page={{ i }}">{{ i }}</a>
+          </li>
+          {% endif %}
+          {% endfor %}
         </ul>
       </nav>
       {% else %}
       <p class="text-center mt-5">No article</p>
       {% endif %}
     </div>
-  </div>
-</div>
-
-<div class="container-fluid bg-light">
-  <div class="container">
-    <footer class="row pt-5 mt-5">
-      <div class="col mb-3">
-        <h3 class="fw-bold">Blog.</h3>
-      </div>
-
-      <div class="col mb-4">
-        <h5 class="fw-bold">About Us</h5>
-        <ul class="nav flex-column">
-          <li class="nav-item mb-2">
-            <a href="#" class="nav-link p-0 text-body-secondary">Home</a>
-          </li>
-          <li class="nav-item mb-2">
-            <a href="#" class="nav-link p-0 text-body-secondary"
-              >Features</a
-            >
-          </li>
-          <li class="nav-item mb-2">
-            <a href="#" class="nav-link p-0 text-body-secondary">Pricing</a>
-          </li>
-          <li class="nav-item mb-2">
-            <a href="#" class="nav-link p-0 text-body-secondary">FAQs</a>
-          </li>
-          <li class="nav-item mb-2">
-            <a href="#" class="nav-link p-0 text-body-secondary">About</a>
-          </li>
-        </ul>
-      </div>
-
-      <div class="col mb-4">
-        <h5 class="fw-bold">Contact us</h5>
-        <ul class="nav flex-column">
-          <br />
-          <li class="nav-item mb-2">
-            <a href="#" class="nav-link p-0 text-contact-us"
-              >thuytam214@gmail.com</a
-            >
-          </li>
-          <li class="nav-item mb-2">
-            <a href="#" class="nav-link p-0 text-contact-us"
-              >+ 0909099090</a
-            >
-          </li>
-        </ul>
-      </div>
-    </footer>
   </div>
 </div>
 
