--- a/users/templates/users/post-collection.html
+++ b/users/templates/users/post-collection.html
@@ -1,63 +1,33 @@
 {% load static %}
 <!DOCTYPE html>
-<html lang="en" class="h-100">
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-<head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-    <meta name="description" content="" />
-    <meta name="author" content="" />
-    <title>Profile</title>
-    <!-- Core theme CSS (includes Bootstrap)-->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous" />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800&display=swap"
-        rel="stylesheet" />
-    <link rel="stylesheet" type="text/css" href="{% static 'style.css' %}" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
-        integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA=="
-        crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link href="https://fonts.googleapis.com/css2?family=Signika:wght@300;400;500;600;700&display=swap"
-        rel="stylesheet" />
-</head>
-
-<body class="h-100 d-flex flex-column">
-    <!-- Responsive navbar-->
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <div class="container">
-            <a class="navbar-brand" href="{% url 'index' %}">Blog.</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
-                aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-                    {% if user.is_authenticated %}
-                    <li class="nav-item d-flex align-items-center">
-                        <a class="me-3 welcome-user" href="{% url 'user:profile' %}">
-                            Welcome, {{ user.username }}!
-                        </a>
-                    </li>
-                    <li class="nav-item d-flex align-items-center">
-                        <a class="btn btn-logout" href="{% url 'user:logout' %}"> Logout </a>
-                    </li>
-                    {% else %}
-                    <li class="nav-item">
-                        <a class="btn btn-signup me-3" href="{% url 'user:register' %}">
-                            Sign up
-                        </a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="btn btn-signin" href="{% url 'user:login' %}"> Login </a>
-                    </li>
-                    {% endif %}
-                </ul>
-            </div>
-        </div>
-    </nav>
+    <link
+		rel="stylesheet"
+		href="https://bootswatch.com/5/simplex/bootstrap.min.css"
+    />
+    <link
+		rel="stylesheet"
+		href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
+		integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA=="
+		crossorigin="anonymous"
+		referrerpolicy="no-referrer"
+    />
+    <link
+		href="https://fonts.googleapis.com/css2?family=Signika:wght@300;400;500;600;700&display=swap"
+		rel="stylesheet"
+    />
+		<link rel="stylesheet" type="text/css" href="{% static 'index.css' %}" />
+		<link rel="stylesheet" type="text/css" href="{% static 'detail_post.css' %}" />
+		<link rel="stylesheet" type="text/css" href="{% static 'style.css' %}" />
+    <title>{{title}}</title>
+  </head>
+  <body>
+    {% include 'blog/nav.html' %} 
+    
     <div class="container mt-3">
         <div class="row">
             <!-- Side widgets-->
@@ -93,39 +63,19 @@
                                 </tr>
                             </thead>
                             <tbody>
+                              {% for x in articles %}
                                 <tr>
-                                    <td>Deadline</td>
-                                    <td>Dec. 10, 2023</td>
-                                    <td>LifeStyle</td>
-                                    <td>thuytam</td>
-                                    <td>
+                                    <td>{{ x.title }}</td>
+                                    <td>{{ x.date }}</td>
+                                    <td>{{ x.category }}</td>
+                                    <td>{{ user }}</td>
+                                    <td style="display: flex;">
                                         <button type="button" class="btn btn-outline-primary ms-1"
                                             style="background-color: #20215B;color: white;border: none;">Edit</button>
-                                        <button type="button" class="btn btn-danger ms-1" style="border: none;">Delete</button>
+                                        <a href="{% url 'delete_article' x.id %}" class="btn btn-danger ms-1" style="border: none;">Delete</a>
                                     </td>
                                 </tr>
-                                <tr>
-                                    <td>Deadline</td>
-                                    <td>Dec. 10, 2023</td>
-                                    <td>LifeStyle</td>
-                                    <td>thuytam</td>
-                                    <td>
-                                        <button type="button" class="btn btn-outline-primary ms-1"
-                                            style="background-color: #20215B;color: white;border: none;">Edit</button>
-                                        <button type="button" class="btn btn-danger ms-1" style="border: none;">Delete</button>
-                                    </td>
-                                </tr>
-                                <tr>
-                                    <td>Deadline</td>
-                                    <td>Dec. 10, 2023</td>
-                                    <td>LifeStyle</td>
-                                    <td>thuytam</td>
-                                    <td>
-                                        <button type="button" class="btn btn-outline-primary ms-1"
-                                            style="background-color: #20215B;color: white;border: none;">Edit</button>
-                                        <button type="button" class="btn btn-danger ms-1" style="border: none;">Delete</button>
-                                    </td>
-                                </tr>
+                              {% endfor %}
                             </tbody>
                         </table>
                     </div>
@@ -133,52 +83,25 @@
             </div>
         </div>
     </div>
-    <!-- Footer-->
-    <div class="container-fluid bg-light mt-auto">
-        <div class="container">
-            <footer class="row pt-5 mt-5">
-                <div class="col mb-3">
-                    <h3 class="fw-bold">Blog.</h3>
-                </div>
-
-                <div class="col mb-4">
-                    <h5 class="fw-bold">Section</h5>
-                    <ul class="nav flex-column">
-                        <li class="nav-item mb-2">
-                            <a href="#" class="nav-link p-0 text-body-secondary">Home</a>
-                        </li>
-                        <li class="nav-item mb-2">
-                            <a href="#" class="nav-link p-0 text-body-secondary">Features</a>
-                        </li>
-                        <li class="nav-item mb-2">
-                            <a href="#" class="nav-link p-0 text-body-secondary">Pricing</a>
-                        </li>
-                        <li class="nav-item mb-2">
-                            <a href="#" class="nav-link p-0 text-body-secondary">FAQs</a>
-                        </li>
-                        <li class="nav-item mb-2">
-                            <a href="#" class="nav-link p-0 text-body-secondary">About</a>
-                        </li>
-                    </ul>
-                </div>
-
-                <div class="col mb-4">
-                    <h5 class="fw-bold">Contact us</h5>
-                    <ul class="nav flex-column">
-                        <br />
-                        <li class="nav-item mb-2">
-                            <a href="#" class="nav-link p-0 text-contact-us">thuytam214@gmail.com</a>
-                        </li>
-                        <li class="nav-item mb-2">
-                            <a href="#" class="nav-link p-0 text-contact-us">+ 0909099090</a>
-                        </li>
-                    </ul>
-                </div>
-            </footer>
-        </div>
-    </div>
-    <!-- Bootstrap core JS-->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
-</body>
-
+    
+    {% include 'blog/footer.html' %}
+    <script
+      src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"
+      integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.min.js"
+      integrity="sha384-mQ93GR66B00ZXjt0YO5KlohRA5SY2XofN4zfuZxLkoj1gXtW8ANNCe9d5Y3eG5eD"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      type="module"
+      src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"
+    ></script>
+    <script
+      nomodule
+      src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"
+    ></script>
+  </body>
 </html>
