--- a/blog/templates/blog/footer.html
+++ b/blog/templates/blog/footer.html
@@ -1,4 +1,4 @@
-<div class="container-fluid bg-light">
+<div class="container-fluid bg-light mt-auto">
     <div class="container">
         <footer class="row py-5 mt-5">
             <div class="col-md-5">
