--- a/users/templates/users/post-collection.html
+++ b/users/templates/users/post-collection.html
@@ -36,7 +36,7 @@
                     <div class="card-body text-center">
                         <img src="https://mdbcdn.b-cdn.net/img/Photos/new-templates/bootstrap-chat/ava3.webp"
                             alt="avatar" class="rounded-circle img-fluid" style="width: 150px;">
-                        <h5 class="my-3">John Smith</h5>
+                        <h5 class="my-3">{{ user.username }}</h5>
                         <div class="mt-2">
                             <a href="{% url 'user:profile' %}" class="btn btn-outline-primary ms-1"
                                 style="background-color: #20215B;color: white;border: none;">Profile</a>
