adjust blog_delete

--- a/blog/templates/blog/blog_delete.html
+++ b/blog/templates/blog/blog_delete.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 	<div class="mx-2">
-		<a href="{% url 'index' %}">Cancel</a>
+		<a href="{% url 'user:post-collection' %}">Cancel</a>
 	</div>
 	<div class="row">
 		<div class="col-md-6 col-11 mx-md-auto mx-3 mt-md-0 mt-3">
