--- a/users/templates/users/register.html
+++ b/users/templates/users/register.html
@@ -3,7 +3,7 @@
 
 {% block content %}
 	<div class="row">
-		<div class="col-11 col-md-4 mx-auto mt-5">
+		<div class="col-11 col-md-4 mx-auto mt-5 mb-5">
 				<h1>Sign Up</h1>
 				<form method="POST">
 					{% csrf_token %}
