full function, without avatar

--- a/blog/static/detail_post.css
+++ b/blog/static/detail_post.css
@@ -114,7 +114,7 @@ textarea.form-control {
   box-shadow: none !important;
   outline: none !important;
 }
-textarea.form-control {
+.comment-text {
   border: none !important;
 }
 .custom-comment {
