--- a/blog/templates/blog/detail_post.html
+++ b/blog/templates/blog/detail_post.html
@@ -69,7 +69,7 @@
               {% csrf_token %}
               <div class="mb-4 shadow-sm">
                 <textarea
-                class="form-control"
+                class="form-control comment-text"
                 rows="3"
                 placeholder="Join the discussion and leave a comment!"
                 name="comment_text"
