--- a/blog/templates/blog/blog_create.html
+++ b/blog/templates/blog/blog_create.html
@@ -17,16 +17,22 @@
                     </div>
                 </div>
             </div>
+            <style>
+                form button{
+                    background-color: #20215B;color: white;border: none;
+                    padding: 5px 10px;border-radius: 5px;
+                }
+            </style>
 			<!-- Blog entries-->
 			<div class="col-lg-8 mb-5">
 				<div class="p-2">
-					<h1 style="color: #20215B;">Delete Post</h1>
-					<h3>Are you sure you want to delete this blog post?</h3>
-					<form method="POST">
-						{% csrf_token %}
-						<button class="btn btn-primary" type="submit">Confirm</button>
-						<span style="margin-left: 10px;"><a href="{% url 'post-collection' %}">Cancel</a></span> 
-					</form>
+					<h2 style="color: #20215B;">Add Post</h2>
+                    <form method="post">
+                        {% csrf_token %}
+                        {{ form.as_p }}
+                        <button type="submit">Save Changes</button>
+                        <span style="margin-left: 10px;"><a href="{% url 'post-collection' %}">Cancel</a></span>
+                    </form>
 				</div>
 			</div>
 		</div>
